# vid-split-to-x-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
vid_split_to_x/: __init__.py  cli.py
